force-app/main/default/objects/cgcloud__Job_DL_Template_Def_Template__c/cgcloud__Job_DL_Template_Def_Template__c.object-meta.xml
<CustomObject>
    <description>Holds a list of job definition templates in the job definition list template. The assigned job definition templates are used for presetting job definitions when creating a job definition list based on this template.</description>
    <label>Template Question</label>
    <nameField>
        <displayFormat>J-{0000}</displayFormat>
        <label>Template Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>