force-app/main/default/objects/cgcloud__Job_DL_Template_Def_Template__c/fields/cgcloud__Composite_Key__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Composite_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Contains concationation of the related records Job definition List Template and Job Definition Template. The field is set by workflow. This helps to avoid that a Job Definition Template can be added twice to a Job Definition List.</description>
    <label>Composite Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>