force-app/main/default/objects/cgcloud__Job_DL_Template_Def_Template__c/fields/cgcloud__Job_Definition_List_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Job_Definition_List_Template__c</fullName>
    <label>Activity Template</label>
    <referenceTo>cgcloud__Job_Definition_List_Template__c</referenceTo>
    <relationshipLabel>Template Questions</relationshipLabel>
    <relationshipName>JobDLMetaDefMeta</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>