force-app/main/default/objects/cgcloud__Job_DL_Template_Def_Template__c/fields/cgcloud__Job_Definition_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Job_Definition_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Definition Template</label>
    <referenceTo>cgcloud__Job_Definition_Template__c</referenceTo>
    <relationshipLabel>Template Questions</relationshipLabel>
    <relationshipName>Job_Definition_List_Template_Definition</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>