force-app/main/default/objects/cgcloud__Job_DL_Template_Def_Template__c/validationRules/cgcloud__Sales_Org_should_be_same_as_template.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same_as_template</fullName>
    <active>true</active>
    <description>The Activity Template and Job Definition Template must have same Sales Org.</description>
    <errorConditionFormula>TEXT (cgcloud__Job_Definition_List_Template__r.cgcloud__Sales_Org__c) &lt;&gt;  TEXT (cgcloud__Job_Definition_Template__r.cgcloud__Sales_Org__c)</errorConditionFormula>
    <errorMessage>The Activity Template and Job Definition Template must have same Sales Org.</errorMessage>
</ValidationRule>